--- a/tasks/dropin.yml
+++ b/tasks/dropin.yml
@@ -1,6 +1,7 @@
 ---
 
 - name: Configration tasks
+  when: needrestart_package_ensure != 'absent'
   tags:
     - needrestart_config
     - needrestart
